[package]
name = "rmars"
description = "Memory Array Redcode Simulator (MARS) for Core War written in Rust"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Misza13/rMARS/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
